<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.1.2</version>
	</parent>

	<groupId>no.nav.dokdistadmin</groupId>
	<artifactId>dokdistadmin</artifactId>
	<packaging>pom</packaging>
	<version>1.0-SNAPSHOT</version>

	<modules>
		<module>app</module>
		<module>core</module>
		<module>rdist001</module>
	</modules>

	<properties>
		<java.version>17</java.version>

		<logstash-logback-encoder.version>7.4</logstash-logback-encoder.version>
		<token-support.version>3.1.2</token-support.version>

		<!-- Test -->
		<spring-cloud-contract-wiremock.version>4.0.4</spring-cloud-contract-wiremock.version>
		<datasource-proxy-spring-boot-starter.version>1.9.0</datasource-proxy-spring-boot-starter.version>

		<!-- Plugins -->
		<maven-toolchains-plugin.version>3.1.0</maven-toolchains-plugin.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>no.nav.dokdistadmin</groupId>
				<artifactId>core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokdistadmin</groupId>
				<artifactId>rdist001</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.security</groupId>
				<artifactId>token-validation-spring</artifactId>
				<version>${token-support.version}</version>
			</dependency>
			<dependency>
				<groupId>net.logstash.logback</groupId>
				<artifactId>logstash-logback-encoder</artifactId>
				<version>${logstash-logback-encoder.version}</version>
			</dependency>

			<!-- Test -->
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-contract-wiremock</artifactId>
				<version>${spring-cloud-contract-wiremock.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>no.nav.security</groupId>
				<artifactId>token-validation-spring-test</artifactId>
				<version>${token-support.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>com.github.gavlyukovskiy</groupId>
				<artifactId>datasource-proxy-spring-boot-starter</artifactId>
				<version>${datasource-proxy-spring-boot-starter.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-toolchains-plugin</artifactId>
				<version>${maven-toolchains-plugin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>toolchain</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<toolchains>
						<jdk>
							<version>${java.version}</version>
							<vendor>openjdk</vendor>
						</jdk>
					</toolchains>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>